minor ui changes

--- a/gold-admin-frontend/src/app/views/pages/user-management/merchant/add-merchant/merchant.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/merchant/add-merchant/merchant.component.html
@@ -21,8 +21,8 @@
                 <div class="step-number">
                     2
                 </div>
-                <p class="step-name">Basic Details</p>
-                <p class="step-details"> User's Basic Details</p>
+                <p class="step-name">Category Details</p>
+                <p class="step-details">Commission</p>
             </div>
         </a>
 
@@ -37,8 +37,8 @@
                 <div class="step-number">
                     3
                 </div>
-                <p class="step-name">Basic Details</p>
-                <p class="step-details"> User's Basic Details</p>
+                <p class="step-name">Asign Permission</p>
+                <p class="step-details"> Catalog Permission</p>
             </div>
         </a>
 
