--- a/gold-admin-frontend/src/app/views/pages/user-management/merchant/add-merchant/tabs/permission/permission.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/merchant/add-merchant/tabs/permission/permission.component.html
@@ -1,3 +1,4 @@
+<kt-toastr #toastr></kt-toastr>
 <kt-portlet>
     <kt-portlet-body>
         <div class="row height">
@@ -7,7 +8,7 @@
                       <button mat-icon-button disabled></button>
                       <mat-checkbox class="checklist-leaf-node"
                                     [checked]="checklistSelection.isSelected(node)"
-                                    (change)="todoLeafItemSelectionToggle(node)">{{node.item}}</mat-checkbox>
+                                    (change)="todoLeafItemSelectionToggle(node)">{{node.item | json}}</mat-checkbox>
                     </mat-tree-node>
                   
                     <mat-tree-node *matTreeNodeDef="let node; when: hasNoContent" matTreeNodePadding>
