--- a/gold-admin-frontend/src/app/views/pages/user-management/merchant/merchant-list/merchant-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/merchant/merchant-list/merchant-list.component.html
@@ -18,85 +18,87 @@
                 <ng-container matColumnDef="merchantName">
                     <!-- ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview -->
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Merchant Name</mat-header-cell>
-                    <mat-cell *matCellDef="let broker">
+                    <mat-cell *matCellDef="let merchant">
                         <div class="text-color" >
-                            {{broker.name}}
+                            {{merchant.merchantName | titlecase}}
                         </div>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="fullName">
                     <!-- ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview -->
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Full Name</mat-header-cell>
-                    <mat-cell *matCellDef="let broker">
+                    <mat-cell *matCellDef="let merchant">
                         <div class="text-color" >
-                            {{broker.name}}
+                            {{merchant.user.firstName | titlecase}}
+                            {{merchant.user.lastName | titlecase}}
                         </div>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="mobileNumber">
                     <!-- ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview -->
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Mobile Number</mat-header-cell>
-                    <mat-cell *matCellDef="let broker">
+                    <mat-cell *matCellDef="let merchant">
                         <div class="text-color" >
-                            {{broker.name}}
+                            {{merchant.user.mobileNumber}}
                         </div>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="email">
                     <!-- ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview -->
                     <mat-header-cell *matHeaderCellDef mat-sort-header>User Email</mat-header-cell>
-                    <mat-cell *matCellDef="let broker">
+                    <mat-cell *matCellDef="let merchant">
                         <div class="text-color" >
-                            {{broker.name}}
+                            {{merchant.user.email}}
                         </div>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="state">
                     <!-- ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview -->
                     <mat-header-cell *matHeaderCellDef mat-sort-header>State</mat-header-cell>
-                    <mat-cell *matCellDef="let broker">
+                    <mat-cell *matCellDef="let merchant">
                         <div class="text-color" >
-                            {{broker.name}}
+                            {{merchant.name}}
                         </div>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="city">
                     <!-- ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview -->
                     <mat-header-cell *matHeaderCellDef mat-sort-header>City</mat-header-cell>
-                    <mat-cell *matCellDef="let broker">
+                    <mat-cell *matCellDef="let merchant">
                         <div class="text-color" >
-                            {{broker.name}}
+                            {{merchant.name}}
                         </div>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="pincode">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>PinCode</mat-header-cell>
-                    <mat-cell *matCellDef="let broker">{{broker.calories}}</mat-cell>
+                    <mat-cell *matCellDef="let merchant">{{merchant.calories}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="approvalStatus">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Approval Status</mat-header-cell>
-                    <mat-cell *matCellDef="let broker">
-                        <div [ngClass]="broker.id == 1 ? 'text-success' :broker.id == 2 ? 'text-warning' : 'text-danger'">
-                            {{broker.carbs}}
+                    <mat-cell *matCellDef="let merchant">
+                        <div [ngClass]="merchant.approvalStatusId == 1 ? 'text-success' :merchant.approvalStatusId == 2 ? 'text-warning' : 'text-danger'" 
+                        *ngFor="let status of approvalStatus">
+                            <span *ngIf="status.id == merchant.approvalStatusId">{{status.statusName | uppercase }}</span>
                         </div>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="status">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Status</mat-header-cell>
-                    <mat-cell *matCellDef="let broker">
+                    <mat-cell *matCellDef="let merchant">
                         <mat-slide-toggle [color]="'accent'">
                         </mat-slide-toggle>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="action">
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
-                    <mat-cell *matCellDef="let broker">
+                    <mat-cell *matCellDef="let merchant">
                         <div [ngStyle]="{'display': 'inherit'}">
-                            <div (click)="editBroker(broker,'view')" class="kt-pointer"> View
+                            <div (click)="editBroker(merchant,'view')" class="kt-pointer"> View
                                 |
                                 &nbsp;
                             </div>
-                            <div (click)="editBroker(broker,'edit')" class="kt-pointer"> Edit
+                            <div (click)="editBroker(merchant,'edit')" class="kt-pointer"> Edit
 
                             </div>
                         </div>
@@ -104,7 +106,7 @@
                 </ng-container>
                 <ng-container matColumnDef="apiKey">
                     <mat-header-cell *matHeaderCellDef>API Key</mat-header-cell>
-                    <mat-cell *matCellDef="let broker">View API</mat-cell>
+                    <mat-cell *matCellDef="let merchant">View API</mat-cell>
                 </ng-container>
 
                 <mat-header-row *matHeaderRowDef="displayedColumns" style="width: 150%;"></mat-header-row>
