bhushan: changes in address details kyc

--- a/gold-admin-frontend/src/styles.scss
+++ b/gold-admin-frontend/src/styles.scss
@@ -321,3 +321,24 @@ mat-header-row{
 		display: none !important;
 	}
 }
+
+// display images and placeholder styling
+
+.img-container {
+	height: 150px;
+	width: 250px;
+	background-color: #f2f3f7;
+	border-radius: 15px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	.fetched-image {
+		width: 100%;
+		height: 100%;
+	}
+
+	.placeholder-image {
+		width: 66px;
+	}
+}
