--- a/gold-admin-frontend/src/app/views/theme/brand/brand.component.html
+++ b/gold-admin-frontend/src/app/views/theme/brand/brand.component.html
@@ -1,16 +1,20 @@
 <!-- begin:: Brand -->
 <div class="kt-aside__brand kt-grid__item" [ngClass]="htmlClassService.getClasses('brand', true)" id="kt_aside_brand">
-	<div class="kt-aside__brand-logo" >
-		<a href="javascript:;" routerLink="/" >
-			<img alt="logo" [attr.src]="headerLogo" [height]="height" [ngStyle]="{'transform': 'translate(50%, 0)'}"  />
+	<div class="kt-aside__brand-logo">
+		<a href="javascript:;" routerLink="/">
+			<img alt="logo" [attr.src]="headerLogo" [height]="height" [ngStyle]="{'transform': 'translate(50%, 0)'}" />
 		</a>
 	</div>
-	<div class="kt-aside__brand-tools">
+	<div class="kt-aside__brand-tools" style="display: block; color: #B09868">
+		<div class="mb-3">
+			{{goldRate}} /gm
+		</div>
 		<button ktToggle [options]="toggleOptions"
 			class="kt-aside__brand-aside-toggler kt-aside__brand-aside-toggler--left" id="kt_aside_toggler">
 			<span [inlineSVG]="'./assets/media/icons/svg/Navigation/Angle-double-left.svg'"></span>
 			<span [inlineSVG]="'./assets/media/icons/svg/Navigation/Angle-double-right.svg'"></span>
 		</button>
+
 	</div>
 </div>
 <!-- end:: Brand -->
